[MMDS][CDAP-13128] UX fixes in experiment detailed view in MMDS
 - Adds an option to specify tooltip text for CopyableId if the test to copy is too long
 - Adds a Copy to Clipboard for the directives in model
 - Adds the ability to hide tooltip on hover for copyableid component to show only the copied message:
 - Adds features count in features popover under model
 - Removes all references of "Deployed" info from experiments
 - Adds color range for experiment metrics bar chart in experiments detailed view
 - Adds color scheme for variable model status for pie chart in experiment detailed view
 - Modifies variables.scss to export colors to be used in js world
 - Modifies IconSVG to allow to accept style tag for cases when required in js world
 - Adds an alias for styles in cdap webpack config

--- a/cdap-ui/app/cdap/components/Experiments/DetailedView/ModelsTable/DetailedViewModelsTable.scss
+++ b/cdap-ui/app/cdap/components/Experiments/DetailedView/ModelsTable/DetailedViewModelsTable.scss
@@ -96,6 +96,20 @@
               .grid-row {
                 grid-template-columns: 1fr;
               }
+              &.directives-list {
+                .grid-header {
+                  .grid-row {
+                    grid-template-columns: 1fr auto;
+                    &:hover {
+                      background: transparent;
+                    }
+                  }
+                  strong {
+                    padding-left: 0;
+                    color: $grey-03;
+                  }
+                }
+              }
             }
           }
           &.loading {
@@ -126,19 +140,6 @@
         color: $grey-03;
         &:hover {
           color: $blue-03;
-        }
-      }
-    }
-    &.directives-list {
-      .grid-header {
-        .grid-row {
-          &:hover {
-            background: transparent;
-          }
-        }
-        strong {
-          padding-left: 0;
-          color: $grey-03;
         }
       }
     }
